[gd_scene load_steps=2 format=3 uid="uid://kmcpl508ouxg"]

[ext_resource type="Script" path="res://ca3 framework/Battle Victory Prize/Root/prize.gd" id="1_al6wo"]

[node name="Prize" type="Node2D"]
script = ExtResource("1_al6wo")
Next = "res://ca3 framework/Relationships Mode/Root/relationships_score.tscn"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 273.0
offset_top = 301.0
offset_right = 877.0
offset_bottom = 346.0
value = 50.0

[node name="Label" type="Label" parent="."]
offset_left = 376.0
offset_top = 75.0
offset_right = 824.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 60
text = "VICTORY COINS"
horizontal_alignment = 1

[node name="Start of Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Update" type="Timer" parent="."]

[node name="End" type="Timer" parent="."]
one_shot = true

[node name="Change" type="Timer" parent="."]
one_shot = true

[node name="LOG" type="Label" parent="."]
offset_left = 37.0
offset_top = 451.0
offset_right = 1113.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 30
text = "UNDECIDED"
horizontal_alignment = 1

[connection signal="timeout" from="Start of Timer" to="." method="_on_start_of_timer_timeout"]
[connection signal="timeout" from="Update" to="." method="_on_update_timeout"]
[connection signal="timeout" from="End" to="." method="_on_end_timeout"]
[connection signal="timeout" from="Change" to="." method="_on_change_timeout"]
